<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        android:onClick="profileClick"/>
    <item
        android:id="@+id/addPayment"
        android:title="@string/addPayment"
        android:icon="@drawable/ic_add"
        android:onClick="addPaymentClick"/>
    <item
        android:id="@+id/payments"
        android:title="@string/payments"
        android:icon="@drawable/ic_payment"
        android:onClick="getPayments"/>
    <item
        android:id="@+id/group"
        android:title="@string/group"
        android:icon="@drawable/ic_group"
        android:onClick="getAllUsers"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        android:onClick="settingsClick"/>

</menu>