<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/regLoginET"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:hint="@string/login"
                />
            <EditText
                android:id="@+id/regEmailET"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:hint="@string/email"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:id="@+id/regPaswordET"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:id="@+id/regConfirmPaswordET"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/registerButton"
                android:backgroundTint="@color/grey"
                android:onClick="registerClick"/>


        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>