<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <EditText
            android:id="@+id/profileLogin"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/login"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/profileEmail"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/email"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="20dp"

            />

        <EditText
            android:id="@+id/profilePassword"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank"
            android:layout_marginTop="20dp"

            />

        <EditText
            android:id="@+id/bankET"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/bank"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountNumber"
            android:layout_marginTop="20dp"

            />

        <EditText
            android:id="@+id/accNumberET"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/accountNumber"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/updateBtn"
            android:backgroundTint="@color/grey"
            android:onClick="updateClick"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>