<?xml version="1.0" encoding="utf-8"?>
  <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.LoginActivity">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:gravity="center">

          <EditText
              android:id="@+id/loginET"
              android:layout_width="200dp"
              android:layout_height="40dp"
              android:tooltipText="@string/login"
              android:hint="@string/login"
              />
          <EditText
              android:id="@+id/paswordET"
              android:layout_width="200dp"
              android:layout_height="40dp"
              android:tooltipText="@string/login"
              android:hint="@string/password"
              android:inputType="textPassword"
              android:layout_marginTop="20dp"
              />
          <TextView
              android:id="@+id/createAcc"
              android:layout_width="200dp"
              android:layout_height="30dp"
              android:text="@string/registerLink"
              android:textColor="@color/black"
              android:textSize="16sp"
              android:layout_marginTop="10dp"
              android:gravity="end"
              android:clickable="true"
              android:onClick="createAccountClick"
              android:focusable="true"
              android:textStyle="bold"
              />
          <Button
              android:layout_width="150dp"
              android:layout_height="50dp"
              android:layout_marginTop="30dp"
              android:text="@string/loginButton"
              android:backgroundTint="@color/grey"
              android:onClick="loginClick"/>


      </LinearLayout>

  </RelativeLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>